k8s/k8s-evohome.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: evohome
  labels:
    app: evohome-exporter
---
apiVersion: v1
kind: Service
metadata:
  name: evohome-svc
  namespace: evohome
  labels:
    app: evohome-exporter
spec:
  selector:
    app: evohome-exporter
  type: ClusterIP
  ports:
    - name: metrics
      port: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evohome-deploy
  namespace: evohome
  labels:
    app: evohome-exporter
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evohome-exporter
  template:
    metadata:
      labels:
        app: evohome-exporter
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - evohome-exporter
                topologyKey: kubernetes.io/hostname
      containers:
        - name: evohome-exporter
          image: localhost:32000/evohome-exporter:registry
          imagePullPolicy: "Always"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - name: metrics
              containerPort: 8082
          startupProbe:
            httpGet:
              path: /metrics
              port: metrics
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: tz
              mountPath: /etc/localtime
      volumes:
        - name: tz
          hostPath:
            path: /etc/localtime
