k8s/service-dashboard-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  selector:
    k8s-app: kubernetes-dashboard
  type: NodePort
  ports:
    - name: kubernetes-dashboard-http
      protocol: TCP
      port: 443
      nodePort: 30100
