k8s/service-evohome.yaml
apiVersion: v1
kind: Service
metadata:
  name: evohome-exporter
  labels:
    app: evohome-exporter
  namespace: evohome-exporter
spec:
  type: ClusterIP
  selector:
    app: evohome-exporter
  ports:
    - name: metrics
      port: 8082
