k8s/service-prometheus-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - name: prometheus-http
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30090
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  type: NodePort
  ports:
    - name: alertmanager-http
      protocol: TCP
      port: 9093
      targetPort: 9093
      nodePort: 30093
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - name: grafana-http
      protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30094
---
